# immich-mcp

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
src/immich_mcp/: client.py  config.py  main.py  utils.py
src/immich_mcp/prompts/: __init__.py  albums.py  duplicates.py  untagged.py
src/immich_mcp/tools/: __init__.py  activities.py  albums.py  assets.py  duplicates.py  health.py  people.py  search.py  shared_links.py  tags.py  user.py
tests/: conftest.py
tests/tools/: conftest.py  test_activities.py  test_albums.py  test_assets.py  test_duplicates.py  test_health.py  test_people.py  test_search.py  test_shared_links.py  test_tags.py  test_user.py
