[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "immich-mcp"
version = "0.1.0"
description = "MCP server for Immich photo management with duplicate detection"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
immich-mcp = "immich_mcp.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/immich_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
